# oilify

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
oilify-studio-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
oilify-studio-backend/migrations/: env.py
oilify-studio-backend/migrations/versions/: 0001_bootstrap_schema.py
oilify-studio-backend/src/oilify_backend/: main.py
oilify-studio-backend/src/oilify_backend/api/: __init__.py  app.py
oilify-studio-backend/src/oilify_backend/config/: __init__.py  setting.py
oilify-studio-backend/src/oilify_backend/db/: __init__.py  connection.py  schema.py
oilify-studio-backend/src/oilify_backend/router/: oil_price_router.py
oilify-studio-backend/src/oilify_backend/schemas/: __init__.py
oilify-studio-backend/src/oilify_backend/services/: oil_price.py  (+1 more)
oilify-studio-backend/src/oilify_studio_backend/: __init__.py  main.py
oilify-studio-backend/src/recnexteval_studio_backend/: main.py
oilify-studio-backend/tests/: conftest.py  test_config.py  test_db.py  test_router.py  test_scheduler.py  test_seed.py  test_services.py
oilify-studio-backend/tests/config/: test_setting.py
oilify-studio-backend/tests/db/: test_connection.py  test_schema.py  test_seed.py
oilify-studio-backend/tests/oilify/: conftest.py  test_app.py  test_config.py  test_db.py  test_router.py  test_scheduler.py  test_seed.py  test_services.py
oilify-studio-backend/tests/router/: conftest.py  test_algorithm_router.py  test_auth_google_router.py  test_auth_router.py  test_dataset_router.py  test_evaluator_router.py  test_metric_router.py  test_stream_router.py
oilify-studio-backend/tests/services/: test_auth.py  test_evaluator.py  test_evaluator_recnexteval_errors.py
(+85 files in other folders)
